[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/light-gray-background-with-small-sparkles-texture-macro-focus-microtexture_328295-112.webp" type="Texture" id=1]
[ext_resource path="res://Assets/button.png" type="Texture" id=2]
[ext_resource path="res://Assets/button_pressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/GUI/Comfortaa-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Menus/LoginScreen.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_color = Color( 0.615686, 0.556863, 0.690196, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 32
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 32
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 32
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 32
outline_color = Color( 1, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 50
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="LoginScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 800, 900 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIContainer" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 70.0
margin_top = 80.0
margin_right = -70.0
margin_bottom = -80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Background/UIContainer"]
margin_right = 940.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Better Tic Tac Toe [BETA]"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="Background/UIContainer"]
margin_top = 61.0
margin_right = 940.0
margin_bottom = 141.0
rect_min_size = Vector2( 0, 80 )

[node name="UsernameTitle" type="Label" parent="Background/UIContainer"]
margin_top = 145.0
margin_right = 940.0
margin_bottom = 182.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Username"

[node name="Username" type="LineEdit" parent="Background/UIContainer"]
margin_top = 186.0
margin_right = 940.0
margin_bottom = 215.0
custom_fonts/font = SubResource( 8 )
max_length = 15

[node name="PasswordTitle" type="Label" parent="Background/UIContainer"]
margin_top = 219.0
margin_right = 940.0
margin_bottom = 256.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Password"

[node name="Password" type="LineEdit" parent="Background/UIContainer"]
margin_top = 260.0
margin_right = 940.0
margin_bottom = 289.0
custom_fonts/font = SubResource( 9 )
max_length = 35

[node name="MarginContainer2" type="MarginContainer" parent="Background/UIContainer"]
margin_top = 293.0
margin_right = 940.0
margin_bottom = 358.0
rect_min_size = Vector2( 0, 65 )

[node name="LoginButton" type="TextureButton" parent="Background/UIContainer"]
margin_left = 295.0
margin_top = 362.0
margin_right = 645.0
margin_bottom = 442.0
rect_min_size = Vector2( 350, 80 )
size_flags_horizontal = 4
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Background/UIContainer/LoginButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Login"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateAccountButton" type="TextureButton" parent="Background/UIContainer"]
margin_left = 295.0
margin_top = 446.0
margin_right = 645.0
margin_bottom = 526.0
rect_min_size = Vector2( 350, 80 )
size_flags_horizontal = 4
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Background/UIContainer/CreateAccountButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Create Account"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Background/UIContainer"]
margin_top = 530.0
margin_right = 940.0
margin_bottom = 570.0

[node name="Label" type="Label" parent="Background/UIContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 239.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Remember Me"

[node name="RememberMe" type="CheckButton" parent="Background/UIContainer/HBoxContainer"]
margin_left = 243.0
margin_right = 319.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0

[node name="ErrorText" type="Label" parent="Background/UIContainer"]
margin_top = 574.0
margin_right = 940.0
margin_bottom = 611.0
custom_colors/font_color = Color( 0.807843, 0.0705882, 0.0705882, 1 )
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
anchor_left = 0.4
anchor_right = 0.4
margin_left = 21.0
margin_top = 600.0
margin_right = 961.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tint" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.921569 )

[node name="BufferText" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -262.0
margin_top = -28.5
margin_right = 262.0
margin_bottom = 28.5
custom_fonts/font = SubResource( 6 )
text = "Logging in asdasd..."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Background/UIContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="Background/UIContainer/CreateAccountButton" to="." method="_on_CreateAccountButton_pressed"]
[connection signal="toggled" from="Background/UIContainer/HBoxContainer/RememberMe" to="." method="_on_RememberMe_toggled"]
